--- a/PostSafety/PostSafety/Storyboards/Admin.storyboard
+++ b/PostSafety/PostSafety/Storyboards/Admin.storyboard
@@ -221,6 +221,16 @@
                         <viewLayoutGuide key="safeArea" id="C2s-u3-M6m"/>
                     </view>
                     <navigationItem key="navigationItem" id="TIA-Lz-dtf"/>
+                    <connections>
+                        <outlet property="categoryLable" destination="3tv-0g-w9e" id="msu-WZ-Rij"/>
+                        <outlet property="dateLable" destination="cqR-n2-w1G" id="KHk-UC-7Mr"/>
+                        <outlet property="locationLable" destination="VYj-98-bAM" id="FMD-zZ-24t"/>
+                        <outlet property="reporterLable" destination="FUR-Rs-Vb5" id="vqz-id-1b4"/>
+                        <outlet property="reporterPhoneNumberLable" destination="vXg-tx-Uvl" id="XUB-VW-ZZW"/>
+                        <outlet property="subCategoryLable" destination="l5h-Ag-ayw" id="8KU-UD-2ml"/>
+                        <outlet property="timeLable" destination="mb8-zF-yln" id="gNb-xj-Eh1"/>
+                        <outlet property="typeLable" destination="YEt-w6-Do3" id="Uwr-pe-3C0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Uby-EU-rD6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -270,7 +280,7 @@
                                                     <constraint firstAttribute="height" constant="4" id="W6d-fM-GiN"/>
                                                 </constraints>
                                             </view>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="248" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oUz-RF-C4I">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="248" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oUz-RF-C4I">
                                                 <rect key="frame" x="0.5" y="36" width="345.5" height="230.5"/>
                                                 <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit .</string>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -316,6 +326,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="e1S-eR-074"/>
                     </view>
+                    <connections>
+                        <outlet property="reportDetailsLable" destination="oUz-RF-C4I" id="EwD-Pz-DfC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7JR-0Z-Vnx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
